--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.116.2",
+    "prefect>=3.4.25",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
 ]
